# generated 2006/11/13 15:00:08 CET by tobias@THINKPAD-T43.(none)
# using glademm V2.6.0
#
# newer (non customized) versions of this file go to Makefile.am_new
bin_PROGRAMS = gninjam

gninjam_SOURCES = \
	gninjam.cc\
	gNinjamClient_glade.cc \
	gNinjamClient.cc \
	vbox_local_glade.cc \
	vbox_local.cc \
	vbox_remote_glade.cc \
	vbox_remote.cc \
	vbox_local_channel_glade.cc \
	vbox_local_channel.cc \
	vbox_remote_channel_glade.cc \
	vbox_remote_channel.cc \
	dialog_license_glade.cc \
	dialog_license.cc \
	window_preferences_glade.cc \
	window_preferences.cc \
	dialog_connect_glade.cc \
	dialog_connect.cc \
	RemoteUserFrame_glade.cc \
	RemoteUserFrame.cc \
	common.cc

noinst_HEADERS = \
	gNinjamClient_glade.hh \
	gNinjamClient.hh \
	vbox_local_glade.hh \
	vbox_local.hh \
	vbox_remote_glade.hh \
	vbox_remote.hh \
	vbox_local_channel_glade.hh \
	vbox_local_channel.hh \
	vbox_remote_channel_glade.hh \
	vbox_remote_channel.hh \
	dialog_license_glade.hh \
	dialog_license.hh \
	window_preferences_glade.hh \
	window_preferences.hh \
	dialog_connect_glade.hh \
	dialog_connect.hh \
	RemoteUserFrame_glade.hh \
	RemoteUserFrame.hh \
	common.hh

AM_CXXFLAGS = @CXXFLAGS@ @GTKMM_CFLAGS@ @GCONF_CFLAGS@ @NINJAM_CFLAGS@ -malign-double

gninjam_LDADD = @LIBS@ @GTKMM_LIBS@ @GCONF_LIBS@ @NINJAM_LIBS@ -lpthread
